Initial commit: Gym website with Next.js and Tailwind

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,13 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/app/generated/prisma
+
+
+node_modules
+.env
+dist
+.next
+.DS_Store
+*.log
