--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
+    "framer-motion": "^12.19.1",
     "mysql2": "^3.14.1",
     "next": "15.3.4",
     "prisma": "^6.10.1",
